src/index.css
@import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
@import "@flaticon/flaticon-uicons/css/all/all";

@tailwind base;
@tailwind components;
@tailwind utilities;

.swiper {
    width: 100%;
    height: 100%;
  }
  
  .swiper-slide {
    text-align: center;
    font-size: 18px;
    background: #fff;
  
    /* Center slide text vertically */
    display: flex;
    justify-content: center;
    align-items: center;
  }
  
  .swiper-slide img {
    top: 300px;
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
  

